--- a/.github/workflows/push-to-dev.yml
+++ b/.github/workflows/push-to-dev.yml
@@ -30,10 +30,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Ensure the code is checked out here as well
+        uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install # Ensure dependencies are installed in this job
+        run: npm install
 
       - name: Run Vitest
         run: npm run test
