--- a/.github/workflows/push-to-dev.yml
+++ b/.github/workflows/push-to-dev.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-  test:
+  test-app:
     runs-on: ubuntu-latest
     needs: setup-node
 
